tests/bugs/missleading_blob_301.sy
A :: blob {
    a: str,
    b: str,
}

start :: fn do
    a := A {
        a: "a"
        b: "b",
    }
end
// error: @7
// error: @8
// error: @9
// error: @11
